# OvitoElfcarReader

./: pyproject.toml
src/OvitoElfcarReader/: __init__.py
tests/: test_pymatgen.py
tests/data/: POSCAR
